<resources>
    <string name="app_name">Jayeen Taxi </string>
    <string name="facebook_app_id">132560970738577</string>
    <string name="action_settings">Settings</string>
    <string name="text_fname">FIRST NAME</string>
    <string name="text_lname">LAST NAME</string>
    <string name="text_email">EMAIL</string>
    <string name="text_number">NUMBER</string>
    <string name="text_passs">PASSWORD</string>
    <string name="text_pass_current">CURRENT PASSWORD</string>
    <string name="text_pass_new">NEW PASSWORD</string>
    <string name="text_pass_retype">CONFIRM NEW PASSWORD</string>
    <string name="text_address">ADDRESS</string>
    <string name="text_bio">BIO</string>
    <string name="text_zip">ZIPCODE</string>
    <string name="text_next">NEXT</string>
    <string name="text_signin">SIGN IN</string>
    <string name="text_comment">Leave a comment</string>
    <string name="text_register">REGISTER</string>
    <string name="text_credit_card_number">CREDIT CARD NUMBER</string>
    <string name="text_credit_card_holder">CREDIT CARD HOLDER</string>
    <string name="Scan_card">Scan Your Payment Card</string>
    <string name="text_mm">MM</string>
    <string name="text_yy">YYYY</string>
    <string name="text_cvc">CVC</string>
    <string name="text_addpayment">ADD PAYMENT</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_apply">APPLY</string>
    <string name="text_forgetpass">FORGOT PASSWORD ?</string>
    <string name="text_contacting">CONTACTING NEARBY DRIVERS</string>
    <string name="text_waiting_for_confirm">WAITING FOR DRIVER TO CONFIRM YOUR TRIP</string>
    <string name="text_creating_request">CREATING REQUEST</string>
    <string name="text_changing_default_card">CHANGING DEFAULT CARD</string>
    <string name="text_changing_payment_mode">CHANGING PAYMENT MODE</string>
    <string name="text_canceling_request">CANCELING REQUEST</string>
    <string name="text_adding_dest">ADDING DESTINATION</string>
    <string name="text_registering">REGISTERING</string>
    <string name="text_loginreg">LOADING</string>
    <string name="text_rating">RATING</string>
    <string name="text_apply_promo">APPLYING PROMO CODE</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_select_cancel">Please Enter</string>
    <string name="text_edit_hintval">Enter</string>
    <string name="dialog_title_country_codes">Country codes</string>
    <string name="access_denied_during_trip">Access Denied !! During Trip </string>
    <string name="phone_call_permission">Sorry!!! Permission Denied</string>
    <string name="text_proper_data">Enter Proper data</string>
    <string name="scan_cancel">Scan was canceled</string>
    <string name="err">Error</string>
    <string name="card_num_status">The card number that you entered is invalid</string>
    <string name="expiry_date_status">The expiration date that you entered is invalid</string>
    <string name="cvc_code_status">The CVC code that you entered is invalid</string>
    <string name="card_detail_status">The card details that you entered are invalid</string>
    <string name="enter_comment">Please enter your Comment</string>
    <string name="change_pickup">Drag to change your Pickup Location</string>
    <string name="select_date_time">Please Select Date And Time</string>
    <string name="schedule_status">Your Schedule Added Successfully</string>
    <string name="schedule_time">Schedule Time should be greater than 30 minutes</string>
    <string name="invalid_date_time">Invalid Date and Time.Choose Some other</string>
    <string name="unable_location">Unable to get location..!</string>
    <string name="select_vehicle">Please select vehicle type</string>
    <string name="img_status">unable to select image</string>
    <string name="payment_mode">Sorry, Cannot change payment mode</string>
    <string name="text_gallary">GALLERY</string>
    <string name="text_camera">CAMERA</string>
    <string name="text_call">CALL</string>
    <string name="text_choosepicture">CHOOSE PICTURE</string>
    <string name="text_my_location">My Location</string>
    <string name="text_drive_location">Driver Location</string>
    <string name="text_mins">MINS</string>
    <string name="progress_loading">LOADING </string>
    <string name="dialog_logout">Log out</string>
    <string name="dialog_logout_text">Are you sure you want to logout?</string>
    <string name="adding_payment">ADDING PAYMENT</string>
    <string name="text_getting_ref_code">GETTING REFERRAL CODE </string>
    <string name="text_share">SHARE</string>
    <string name="text_share_app">Share app!</string>
    <string name="payment_unit">JOD  </string>
    <string name="text_for">for</string>
    <string name="text_per">/</string>
    <string name="text_min">min</string>
    <string name="text_select_journey">Select your Journey Details </string>
    <string name="text_police">Police</string>
    <string name="text_ambulance">Ambulance</string>
    <string name="text_firestation">Fire Station</string>
    <string name="text_soscontent">You Clicked SOS Button. Choose Whom you want to call for emergency</string>
    <string name="sosdialoginfo">Are you sure your want to call</string>
    <string name="text_enter_otp_code">Enter OTP code</string>
    <string name="text_otpref_code">Verify OTP code</string>
    <string name="text_blank_otp_code">Please enter OTP</string>
    <string name="text_schedulehistory">Schedule</string>
    <string name="text_journey_success">Booking Confirmed!</string>
    <string name="success_content1">You Have Successfully Booked a Ride on</string>
    <string name="success_content2">\n Check Your Ride Status on Schedule Menu.</string>
    <string name="text_journey_ok">OK</string>
    <string name="text_resendotp"><u>RESEND OTP</u></string>
    <string name="text_otpedit"><u>Click here</u> to edit your profile Info.</string>
    <string name="text_pickhinttitle">Enter Pick up Address</string>
    <string name="text_drophinttitle">Enter Drop off Address</string>
    <string name="text_otpmaintitle">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="text_otptitlesecond">(Enter the OTP below and get started now)</string>
    <string name="text_enter_email">Please enter email id or mobile number</string>
    <string name="text_enter_password">Please enter password</string>
    <string name="text_enter_password_valid">Password should be at least 6 charater long</string>
    <string name="text_enter_valid_email">Please enter valid email id</string>
    <string name="gcm_defaultSenderId">276090070126</string>
    <string name="text_enter_name">Please enter first name</string>
    <string name="text_enter_lname">Please enter last name</string>
    <string name="text_enter_number">Please enter Valid PhoneNumber</string>
    <string name="no_internet">Internet not available</string>
    <string name="signin_failed">SignIn failed</string>
    <string name="text_location_not_found">Your current location not found</string>
    <string name="text_waiting_for_address">Waiting for address</string>
    <string name="text_eta">ETA</string>
    <string name="text_max_size">MAX SIZE</string>
    <string name="text_min_fare">MIN FARE</string>
    <string name="register_gcm_failed">Failed to register with GCM</string>
    <string name="toast_update_failed">Profile update failed</string>
    <string name="text_profile">Profile</string>
    <string name="text_cards">Payment</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_add_payment">Add Payment</string>
    <string name="text_signin_small">Sign In</string>
    <string name="text_register_small">Register</string>
    <string name="text_addpayment_small">Add Payment</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_gps">No GPS</string>
    <string name="dialog_no_location_service">Please turn on location service from settings, must press on/off toggle and agree to access location and restart an app.\nNote:if you have already done choices with disagree and dont show dialog again then location dialog not show when you press on/off toggle button.to solve this problem you must clear all setting preferences.</string>
    <string name="dialog_no_location_service_title">Locaton service is off.</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_no_gps_messgae">Seems like you have not started your location service.</string>
    <string name="dialog_enable_gps">Enable GPS</string>
    <string name="dialog_enable_location_service">Go to location service</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="text_select_type">Please select vehicle type</string>
    <string name="text_forget_password_loading_msg">RESETTING PASSWORD </string>
    <string name="progress_getting_history">GETTING HISTORY</string>
    <string name="text_history">History</string>
    <string name="text_get_fare_estimate">GET FARE ESTIMATE</string>
    <string name="text_rate_card">RATE CARD</string>
    <string name="text_estimate_fare">This is just an estimate. Actual fares may vary slightly based on traffic or discounts.</string>
    <string name="text_edit_profile">EDIT PROFILE</string>
    <string name="text_update_profile">UPDATE PROFILE</string>
    <string name="progress_update_profile">UPDATING PROFILE</string>
    <string name="toast_unable_to_selct_image">unable to select image</string>
    <string name="your_cards">YOUR CARDS</string>
    <string name="toast_email_ivalid">Not a valid email</string>
    <string name="toast_forget_password_success">Your password would be mailed to your registered email.</string>
    <string name="text_forget_password">FORGOT PASSWORD</string>
    <string name="text_invoice">INVOICE</string>
    <string name="text_base_price">BASE PRICE</string>
    <string name="text_distance_cost">DISTANCE COST</string>
    <string name="text_time_cost">TIME COST</string>
    <string name="text_total">TOTAL</string>
    <string name="text_close">CLOSE</string>
    <string name="text_tips">TIPS</string>
    <string name="text_confirm">CONFIRM</string>
    <string name="text_cost_per_mile">JOD  per km</string>
    <string name="text_cost_per_hour">JOD  per min</string>
    <string name="text_job_accepted">Driver accepted the job</string>
    <string name="text_driver_started">Driver coming to your location</string>
    <string name="text_driver_arrvied">Driver has arrived at your location</string>
    <string name="text_trip_started">Your trip has been started</string>
    <string name="text_trip_completed">Your trip is completed</string>
    <string name="text_not_add_card_unscucess">Adding card failed!</string>
    <string name="text_add_card_scucess">Card added successfully!</string>
    <string name="text_enter_ref_code">Enter referral code</string>
    <string name="text_request">REQUEST</string>
    <string name="text_skip">SKIP</string>
    <string name="text_referral_code">Referral code</string>
    <string name="err_referral_invalid">Invalid referral code. Please try again.</string>
    <string name="msg_referral"> You can add referral code provided by your friend here to get free credits. If you do not have one or don\'t want to insert they just click on Skip button below.</string>
    <string name="text_choose_date">Please Choose Date</string>
    <string name="text_choose_time">Please Choose Time</string>
    <string name="text_note_schedule">Note: Schedule Time Should be More than 30 minutes from your current time</string>
    <string name="text_emergency_call">Make Emergency Call</string>
    <string name="error_623">No Card Found</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="text_add">Add</string>
</resources>