<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.jayeen.customer.component.MyFontPopUpTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bg_name_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="ADD MONEY"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_swipe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_register"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_mainscreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nocard_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="8dp"
                android:visibility="gone"
                android:gravity="center"
                android:text="@string/error_623"/>
            <Spinner
                android:id="@+id/d_card_list_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </Spinner>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:inputType="number"
                android:id="@+id/d_card_amount_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_amount" />
        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="2"
    android:layout_height="wrap_content">
    <Button
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:id="@+id/d_btn_add_amount"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/text_add"
        android:textColor="@color/white" />
    <Button
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:id="@+id/d_btn_cancel_amount"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/text_cancel"
        android:textColor="@color/white" />
</LinearLayout>

</LinearLayout>
